--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
    <h2>task 14-6</h2> 
-   <a href="./task_14_6/task1.html">Task 1</a>
+   <a href="./task_14_6/task1.html">Task 1</a><br/>
+   <a href="./task_14_6/task2.html">Task 2</a><br/>
+   <a href="./task_14_6/task3.html">Task 3</a><br/>
+   <a href="./task_14_6/task4.html">Task 4</a><br/>
+   <a href="./task_14_6/task5.html">Task 5</a><br/>
 </body>
 </html>
