--- a/index.html
+++ b/index.html
@@ -12,5 +12,14 @@
    <a href="./task_14_6/task3.html">Task 3</a><br/>
    <a href="./task_14_6/task4.html">Task 4</a><br/>
    <a href="./task_14_6/task5.html">Task 5</a><br/>
+   <h2>task_15_6</h2> 
+   <a href="./task_15_6/task1.html">Task 1</a><br/>
+   <a href="./task_15_6/task2.html">Task 2</a><br/>
+   <a href="./task_15_6/task3.html">Task 3</a><br/>
+   <a href="./task_15_6/task4.html">Task 4</a><br/>
+   <a href="./task_15_6/task5.html">Task 5</a><br/>
+   <a href="./task_15_6/task6.html">Task 6</a><br/>
+   <a href="./task_15_6/task7.html">Task 7</a><br/>
+
 </body>
 </html>
